Update copyright date.

--- a/extensions/vx_khr_import_kernel/1.1/vx_khr_import_kernel_1_1.html
+++ b/extensions/vx_khr_import_kernel/1.1/vx_khr_import_kernel_1_1.html
@@ -843,7 +843,7 @@ table.CodeRay td.code>pre{padding:0}
 <span id="author" class="author">The Khronos<sup>®</sup> OpenVX Working Group</span><br>
 <span id="author2" class="author">Editor: Radhakrishna Giduthuri</span><br>
 <span id="revnumber">version 1.1 (provisional),</span>
-<span id="revdate">Thu, 07 Mar 2019 06:00:58 +0000</span>
+<span id="revdate">Fri, 08 Mar 2019 01:50:42 +0000</span>
 <br><span id="revremark">Git branch information not available</span>
 </div>
 <div id="toc" class="toc2">
@@ -883,7 +883,7 @@ table.CodeRay td.code>pre{padding:0}
 </div>
 </div>
 <div class="paragraph">
-<p>Copyright 2013-2018 The Khronos Group Inc.</p>
+<p>Copyright 2013-2019 The Khronos Group Inc.</p>
 </div>
 <div class="paragraph">
 <p>This specification is protected by copyright laws and contains material
@@ -960,7 +960,7 @@ the companies that they represented at the time:</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Radhakrishna Giduthuri - AMD</p>
+<p>Radhakrishna Giduthuri, Intel</p>
 </li>
 <li>
 <p>Niclas Danielsson, Axis Communications AB</p>
@@ -1355,7 +1355,7 @@ format type.</p>
 <div id="footer">
 <div id="footer-text">
 Version 1.1 (provisional)<br>
-Last updated 2019-03-06 21:58:55 PST
+Last updated 2019-03-07 17:50:12 PST
 </div>
 </div>
 
