updates to 1.3 specs and standard headers package

--- a/specs/1.3/vx_khr_feature_sets/1.1/html/vx_khr_feature_sets_1_1.html
+++ b/specs/1.3/vx_khr_feature_sets/1.1/html/vx_khr_feature_sets_1_1.html
@@ -843,7 +843,7 @@ table.CodeRay td.code>pre{padding:0}
 <span id="author" class="author">Editor: Frank Brill, Radhakrishna Giduthuri</span><br>
 <span id="author2" class="author">The Khronos<sup>®</sup> OpenVX Working Group</span><br>
 <span id="revnumber">version 1.1,</span>
-<span id="revdate">Tue, 07 Jul 2020 17:43:26 +0000</span>
+<span id="revdate">Thu, 10 Sep 2020 07:06:20 +0000</span>
 <br><span id="revremark">Git branch information not available</span>
 </div>
 <div id="toc" class="toc2">
@@ -1211,6 +1211,12 @@ OpenVX specification:</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>vx_pyramid</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>vx_remap</code></p></td>
 </tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>vx_scalar</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>vx_threshold</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>vx_object_array</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+</tr>
 </tbody>
 </table>
 </div>
@@ -1345,6 +1351,14 @@ in the main OpenVX specification, with exceptions stated explicitly:</p>
 <th class="tableblock halign-left valign-top" colspan="4">Neural Network Conformance required data objects</th>
 </tr>
 </thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>vx_tensor</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>vx_scalar</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>vx_lut</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+</tr>
+</tbody>
 </table>
 <div class="paragraph">
 <p>To enable implementations to target neural network use cases without images, the following
@@ -2742,7 +2756,7 @@ developers may modify OpenVX standard header files without deviating from the Op
 <div id="footer">
 <div id="footer-text">
 Version 1.1<br>
-Last updated 2020-07-07 17:40:22 UTC
+Last updated 2020-09-10 07:03:33 UTC
 </div>
 </div>
 
