Update vx_khr_nn_1_3.html (#46)
* Update vx_khr_nn_1_3.html

Fix the error on the dimention of the output of ROIPooling.

* Update vx_khr_nn_1_3.html

Update the output dimension of ROIPooling to 5D.

--- a/extensions/vx_khr_nn/1.3/html/vx_khr_nn_1_3.html
+++ b/extensions/vx_khr_nn/1.3/html/vx_khr_nn_1_3.html
@@ -2592,7 +2592,7 @@ Note that this parameter is not counted as one of the kernel parameters.</p>
 </li>
 <li>
 <p><code>[out]</code> <em>output_arr</em> - The output tensor.
-Output will have [output_width, output_height, #IFM, #batches]
+Output will have [output_width, output_height, #IFM, roi_count, #batches]
 dimensions.
 #batches is optional and must be the same as in inputs.
 (Kernel parameter #3)</p>
